- Improvement: Adds 403 and 404 error pages [#qubIT-Omnis-8252]

2.12.2 (05-11-2024)
- Refactor: Replaces calls to helpdesk report controller with calls to default support request handler [#qubIT-Support-8445]

2.12.1 (24-10-2024)
- Improvement: Adds tweaks to general.css [#qubIT-Support-810]

2.12.0 (16-08-2024)
- Improvement: Adds bootstrap dependency from bennu [#qubIT-Omnis-6522]
- Improvement: Upgrades to java 17 [#qubIT-Omnis-4749]

2.11.0 (06-05-2024)
- Refactor: Uses new submit report url [#qubIT-Omnis-5785]
- Improvement: Uses support url from portal configuration [#qubIT-Omnis-5755]

2.10.3 (19-04-2024)
- Refactor: Removed unused template executionCourseManagmentLayout.html [#qubIT-Omnis-5780]

2.10.2 (09-04-2024)
- Bug fix: Correcting encoding issues [#UL-REIT-3800]

2.10.1 (02-04-2024)
- Bug fix: Correcting issue with new changes in layout [#qubIT-Fenix-5122]

2.10.0 (02-04-2024)
- New feature: Starts reporting app mode and having dump date on QUALITY and DEVELOPMENT environments [#qubIT-Omnis-5460]
- Improvement: Upgrades to java 11 [#qubIT-Omnis-4753]
- Improvement: Upgrades maven-plugin-plugin to 3.10.2 [#qubIT-Omnis-4751]

2.9.5 (23-02-2023)
- Improvement: update banner's footer

2.9.4 (18-01-2023)
- Improvement: update ISCSP theme

2.9.3 (18-01-2023)
- Improvement: update ISCSP theme

2.9.2 (18-01-2023)
- Improvement: update ISCSP theme

2.9.1 (19-12-2022)
- Bug fix: Removing layout menu from print to avoid issues with new chrome versions

2.9.0 (12-08-2022)
- New feature: Adds user not found error page

2.8.0 (22-07-2022)
- Improvement: Changes in the Login page regarding SSO

2.7.6 (22-06-2022)
- Improvement: Change FA Theme

2.7.5 (10-08-2021)
- Refactor: Refactored login callback so it doesn't skip post login redirectors

2.7.4 (15-03-2021)
- Improvement: Update ISEG Theme (@brand-primary: #e02020; @body-bg: #fbe8e8)

2.7.3 (14-03-2021)
- Improvement: Update ISEG Theme (#fce8e8)

2.7.2 (14-03-2021)
- Improvement: Update ISEG Theme
